--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.72.3",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.6",
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
