--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.1.2",
     "@types/react": "~18.2.14",
+    "dom-to-image": "^2.6.0",
     "expo": "~49.0.5",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
